--- a/wokwi_components.json
+++ b/wokwi_components.json
@@ -1,58 +1,66 @@
 {
   "version": 1,
-  "author": "Uri Shaked",
+  "author": "Anonymous maker",
   "editor": "wokwi",
   "parts": [
-    { "type": "board-esp32-devkit-c-v4", "id": "esp", "top": 0, "left": 4.84, "attrs": {} },
+    { "type": "board-esp32-devkit-c-v4", "id": "esp", "top": -38.4, "left": 33.64, "attrs": {} },
+    { "type": "wokwi-potentiometer", "id": "pot1", "top": 123.5, "left": -173, "attrs": {} },
+    {
+      "type": "wokwi-led",
+      "id": "led1",
+      "top": 6,
+      "left": 243.8,
+      "rotate": 90,
+      "attrs": { "color": "red" }
+    },
     {
       "type": "wokwi-resistor",
       "id": "r1",
-      "top": 138.35,
-      "left": -76.8,
+      "top": 32.75,
+      "left": 163.2,
       "attrs": { "value": "1000" }
+    },
+    {
+      "type": "wokwi-led",
+      "id": "led2",
+      "top": 54,
+      "left": 243.8,
+      "rotate": 90,
+      "attrs": { "color": "orange" }
     },
     {
       "type": "wokwi-resistor",
       "id": "r2",
-      "top": 119.15,
-      "left": -115.2,
+      "top": 80.75,
+      "left": 172.8,
       "attrs": { "value": "1000" }
     },
-    { "type": "wokwi-led", "id": "led1", "top": 73.2, "left": -169, "attrs": { "color": "blue" } },
+    { "type": "wokwi-potentiometer", "id": "pot2", "top": -106.9, "left": -192.2, "attrs": {} },
     {
-      "type": "wokwi-led",
-      "id": "led2",
-      "top": 82.8,
-      "left": -207.4,
-      "attrs": { "color": "green" }
-    },
-    { "type": "wokwi-potentiometer", "id": "pot1", "top": -126.1, "left": -297.8, "attrs": {} },
-    { "type": "wokwi-potentiometer", "id": "pot2", "top": -126.1, "left": -144.2, "attrs": {} },
-    {
-      "type": "wokwi-pushbutton-6mm",
-      "id": "btn1",
-      "top": 74.6,
-      "left": -249.6,
+      "type": "wokwi-pushbutton",
+      "id": "btn2",
+      "top": -109,
+      "left": -86.4,
       "attrs": { "color": "green", "xray": "1" }
     }
   ],
   "connections": [
     [ "esp:TX", "$serialMonitor:RX", "", [] ],
     [ "esp:RX", "$serialMonitor:TX", "", [] ],
-    [ "r1:1", "led1:A", "green", [ "v0.07", "h-10" ] ],
-    [ "r2:1", "led2:A", "green", [ "h-38.4", "v-19.2" ] ],
-    [ "esp:GND.1", "led2:C", "black", [ "h0" ] ],
-    [ "esp:GND.1", "led1:C", "black", [ "h0" ] ],
-    [ "esp:26", "r1:2", "green", [ "h0" ] ],
-    [ "r2:2", "esp:27", "green", [ "v0" ] ],
+    [ "esp:GND.1", "pot1:GND", "black", [ "h-57.45", "v134.4", "h-144" ] ],
+    [ "pot1:VCC", "esp:3V3", "red", [ "v28.8", "h56.8", "v-220.8" ] ],
+    [ "pot1:SIG", "esp:34", "green", [ "v48", "h86", "v-201.6", "h153.45" ] ],
+    [ "led1:C", "esp:GND.2", "black", [ "h-35.6", "v-35.6" ] ],
+    [ "led1:A", "r1:2", "green", [ "h0" ] ],
+    [ "r1:1", "esp:21", "green", [ "v0" ] ],
+    [ "led2:A", "r2:2", "green", [ "h0" ] ],
+    [ "r2:1", "esp:19", "green", [ "v0" ] ],
+    [ "led2:C", "esp:GND.2", "black", [ "h-6.8", "v-26", "h57.6", "v-86.4", "h-163.2" ] ],
     [ "pot2:VCC", "esp:3V3", "red", [ "v0" ] ],
-    [ "pot1:VCC", "esp:3V3", "red", [ "v86.4", "h162.4" ] ],
-    [ "pot2:SIG", "esp:VP", "green", [ "v0" ] ],
-    [ "pot1:SIG", "esp:VN", "green", [ "v0" ] ],
-    [ "btn1:1.r", "esp:35", "green", [ "v0" ] ],
-    [ "btn1:2.l", "esp:GND.1", "black", [ "h-19.2", "v58", "h172.8", "v0" ] ],
-    [ "pot1:GND", "esp:GND.1", "black", [ "v0" ] ],
-    [ "pot2:GND", "esp:GND.1", "black", [ "v0" ] ]
+    [ "pot2:SIG", "esp:33", "green", [ "v0" ] ],
+    [ "pot2:GND", "esp:GND.1", "black", [ "v0" ] ],
+    [ "btn2:1.l", "esp:GND.1", "black", [ "h-9.6", "v201.6" ] ],
+    [ "btn2:2.r", "esp:25", "green", [ "h9.8", "v134.6" ] ]
   ],
   "dependencies": {}
 }
