--- a/wokwi_components.json
+++ b/wokwi_components.json
@@ -1,66 +1,93 @@
 {
   "version": 1,
-  "author": "Anonymous maker",
+  "author": "Uri Shaked",
   "editor": "wokwi",
   "parts": [
-    { "type": "board-esp32-devkit-c-v4", "id": "esp", "top": -38.4, "left": 33.64, "attrs": {} },
-    { "type": "wokwi-potentiometer", "id": "pot1", "top": 123.5, "left": -173, "attrs": {} },
+    { "type": "board-esp32-devkit-c-v4", "id": "esp", "top": 0, "left": 0, "attrs": {} },
     {
       "type": "wokwi-led",
       "id": "led1",
-      "top": 6,
-      "left": 243.8,
-      "rotate": 90,
-      "attrs": { "color": "red" }
-    },
-    {
-      "type": "wokwi-resistor",
-      "id": "r1",
-      "top": 32.75,
-      "left": 163.2,
-      "attrs": { "value": "1000" }
+      "top": 15.6,
+      "left": 167.4,
+      "attrs": { "color": "red", "flip": "1" }
     },
     {
       "type": "wokwi-led",
       "id": "led2",
-      "top": 54,
-      "left": 243.8,
-      "rotate": 90,
-      "attrs": { "color": "orange" }
+      "top": 34.8,
+      "left": 196.2,
+      "attrs": { "color": "green", "flip": "1" }
+    },
+    {
+      "type": "wokwi-resistor",
+      "id": "r1",
+      "top": 119.15,
+      "left": 115.2,
+      "attrs": { "value": "1000" }
     },
     {
       "type": "wokwi-resistor",
       "id": "r2",
-      "top": 80.75,
-      "left": 172.8,
+      "top": 99.95,
+      "left": 115.2,
       "attrs": { "value": "1000" }
     },
-    { "type": "wokwi-potentiometer", "id": "pot2", "top": -106.9, "left": -192.2, "attrs": {} },
     {
-      "type": "wokwi-pushbutton",
-      "id": "btn2",
-      "top": -109,
-      "left": -86.4,
+      "type": "wokwi-pushbutton-6mm",
+      "id": "btn1",
+      "top": 132.2,
+      "left": -76.8,
       "attrs": { "color": "green", "xray": "1" }
+    },
+    { "type": "wokwi-potentiometer", "id": "pot1", "top": -58.9, "left": -96.2, "attrs": {} },
+    { "type": "wokwi-potentiometer", "id": "pot2", "top": -58.9, "left": -182.6, "attrs": {} },
+    {
+      "type": "wokwi-text",
+      "id": "text1",
+      "top": -86.4,
+      "left": -76.8,
+      "attrs": { "text": "LDR" }
+    },
+    {
+      "type": "wokwi-text",
+      "id": "text2",
+      "top": -86.4,
+      "left": -201.6,
+      "attrs": { "text": "Potenciômetro" }
+    },
+    { "type": "wokwi-text", "id": "text3", "top": 0, "left": 163.2, "attrs": { "text": "LED 1" } },
+    {
+      "type": "wokwi-text",
+      "id": "text4",
+      "top": 38.4,
+      "left": 230.4,
+      "attrs": { "text": "LED 2" }
+    },
+    {
+      "type": "wokwi-text",
+      "id": "text5",
+      "top": 134.4,
+      "left": -124.8,
+      "attrs": { "text": "Modo" }
     }
   ],
   "connections": [
     [ "esp:TX", "$serialMonitor:RX", "", [] ],
     [ "esp:RX", "$serialMonitor:TX", "", [] ],
-    [ "esp:GND.1", "pot1:GND", "black", [ "h-57.45", "v134.4", "h-144" ] ],
-    [ "pot1:VCC", "esp:3V3", "red", [ "v28.8", "h56.8", "v-220.8" ] ],
-    [ "pot1:SIG", "esp:34", "green", [ "v48", "h86", "v-201.6", "h153.45" ] ],
-    [ "led1:C", "esp:GND.2", "black", [ "h-35.6", "v-35.6" ] ],
-    [ "led1:A", "r1:2", "green", [ "h0" ] ],
-    [ "r1:1", "esp:21", "green", [ "v0" ] ],
-    [ "led2:A", "r2:2", "green", [ "h0" ] ],
-    [ "r2:1", "esp:19", "green", [ "v0" ] ],
-    [ "led2:C", "esp:GND.2", "black", [ "h-6.8", "v-26", "h57.6", "v-86.4", "h-163.2" ] ],
+    [ "led2:C", "esp:GND.3", "black", [ "v0" ] ],
+    [ "led2:A", "r1:2", "green", [ "v0" ] ],
+    [ "led1:C", "esp:GND.3", "black", [ "v0" ] ],
+    [ "led1:A", "r2:2", "green", [ "v0" ] ],
+    [ "btn1:2.r", "esp:GND.1", "black", [ "h20", "v19.6" ] ],
+    [ "btn1:1.r", "esp:26", "green", [ "v0" ] ],
+    [ "pot1:VCC", "esp:3V3", "red", [ "v0" ] ],
     [ "pot2:VCC", "esp:3V3", "red", [ "v0" ] ],
-    [ "pot2:SIG", "esp:33", "green", [ "v0" ] ],
-    [ "pot2:GND", "esp:GND.1", "black", [ "v0" ] ],
-    [ "btn2:1.l", "esp:GND.1", "black", [ "h-9.6", "v201.6" ] ],
-    [ "btn2:2.r", "esp:25", "green", [ "h9.8", "v134.6" ] ]
+    [ "pot1:GND", "esp:GND.1", "black", [ "v86.4", "h48", "v48" ] ],
+    [ "pot2:GND", "esp:GND.1", "black", [ "v86.4", "h134.4", "v28.8" ] ],
+    [ "r1:1", "esp:17", "green", [ "v0" ] ],
+    [ "r2:1", "esp:18", "green", [ "v0" ] ],
+    [ "pot2:SIG", "esp:33", "green", [ "v76.8", "h134", "v9.6" ] ],
+    [ "pot1:SIG", "esp:34", "green", [ "v57.6", "h-0.4" ] ]
   ],
   "dependencies": {}
 }
