--- a/wokwi_components.json
+++ b/wokwi_components.json
@@ -32,13 +32,6 @@
       "left": 115.2,
       "attrs": { "value": "1000" }
     },
-    {
-      "type": "wokwi-pushbutton-6mm",
-      "id": "btn1",
-      "top": 132.2,
-      "left": -76.8,
-      "attrs": { "color": "green", "xray": "1" }
-    },
     { "type": "wokwi-potentiometer", "id": "pot1", "top": -58.9, "left": -96.2, "attrs": {} },
     { "type": "wokwi-potentiometer", "id": "pot2", "top": -58.9, "left": -182.6, "attrs": {} },
     {
@@ -66,20 +59,23 @@
     {
       "type": "wokwi-text",
       "id": "text5",
-      "top": 134.4,
-      "left": -124.8,
+      "top": 182.4,
+      "left": -115.2,
       "attrs": { "text": "Modo" }
+    },
+    {
+      "type": "wokwi-pushbutton",
+      "id": "btn1",
+      "top": 131,
+      "left": -134.4,
+      "attrs": { "color": "green", "xray": "1" }
     }
   ],
   "connections": [
     [ "esp:TX", "$serialMonitor:RX", "", [] ],
     [ "esp:RX", "$serialMonitor:TX", "", [] ],
-    [ "led2:C", "esp:GND.3", "black", [ "v0" ] ],
     [ "led2:A", "r1:2", "green", [ "v0" ] ],
-    [ "led1:C", "esp:GND.3", "black", [ "v0" ] ],
     [ "led1:A", "r2:2", "green", [ "v0" ] ],
-    [ "btn1:2.r", "esp:GND.1", "black", [ "h20", "v19.6" ] ],
-    [ "btn1:1.r", "esp:26", "green", [ "v0" ] ],
     [ "pot1:VCC", "esp:3V3", "red", [ "v0" ] ],
     [ "pot2:VCC", "esp:3V3", "red", [ "v0" ] ],
     [ "pot1:GND", "esp:GND.1", "black", [ "v86.4", "h48", "v48" ] ],
@@ -87,7 +83,11 @@
     [ "r1:1", "esp:17", "green", [ "v0" ] ],
     [ "r2:1", "esp:18", "green", [ "v0" ] ],
     [ "pot2:SIG", "esp:33", "green", [ "v76.8", "h134", "v9.6" ] ],
-    [ "pot1:SIG", "esp:34", "green", [ "v57.6", "h-0.4" ] ]
+    [ "pot1:SIG", "esp:34", "green", [ "v57.6", "h-0.4" ] ],
+    [ "led1:C", "esp:GND.1", "black", [ "v172.8", "h-211.6", "v-76.8" ] ],
+    [ "led2:C", "esp:GND.1", "black", [ "v144", "h-230.8", "v-67.2" ] ],
+    [ "btn1:1.l", "esp:GND.1", "black", [ "h-9.6", "v-48", "h124.8", "v57.6" ] ],
+    [ "btn1:2.r", "esp:25", "green", [ "h38.6", "v-57.4" ] ]
   ],
   "dependencies": {}
 }
